fix delete-file endpoint to delete assets from cloudinary correctly

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "node app.js"
+    "start-server": "node app.js",
+    "develop": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
